fix(content): harden candidate promotion readiness
Require an exact one-to-one match against production Level(system=JLPT,
code) rows before treating a normalized candidate's JLPT level as
mappable, since (system, code) has no uniqueness constraint today; a
missing or duplicated row now both resolve to JLPT_LEVEL_UNMAPPABLE
instead of silently collapsing duplicates via a Set. Make the readiness
summary's breakdown maps use a deterministic, order-preserving view
instead of Map.copyOf (whose iteration order is unspecified). Widen the
zero-write isolation test to cover the private candidate detail/
meaning/example/match-evidence tables and additional production tables
(meanings, content review history, release batches/items). Correct the
report's Word column nullability claims against the entity, and clarify
that the real-APKG profiling test exercises real deck bytes against an
isolated fresh database, not production database state.